# GGHACKS

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/DeFexGGxANDLUA/hacks/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  old.txt
app/src/main/cpp/Component/ENCRYPTION/: OBFUSCATION.h
app/src/main/cpp/Component/HTTP/: httplib.h
app/src/main/cpp/KittyMemoryEx/: KittyUtils.cpp
app/src/main/java/com/DeFexGGxANDLUA/hacks/: MainActivity.java
app/src/main/res/drawable/: button_background.xml  button_ripple.xml  edittext_border.xml  ic_banner_foreground.xml  ic_launcher_foreground.xml  rounded_button.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/DeFexGGxANDLUA/hacks/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
